# Jasem

./: .gitignore  LICENSE  README.md  jasem.py  pyproject.toml
jasem/: __init__.py  __main__.py  app.py  cli.py  dates.py  durations.py  help.py  parsing.py  presenter.py
jasem/application/: __init__.py  app.py  parsing.py  reports.py
jasem/domain/: __init__.py  spending.py  task.py  time_entry.py
jasem/infrastructure/: __init__.py
jasem/infrastructure/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  registry.py
jasem/infrastructure/storage/: __init__.py  markdown_table.py  spending_store.py  task_store.py  timelog_store.py
jasem/interface/: __init__.py  cli.py  dashboard.py  help.py  layout.py  logo.py  presenter.py
jasem/providers/: anthropic.py  base.py  http.py  openai.py
jasem/shared/: __init__.py  amounts.py  calendar_view.py  charts.py  config.py  console.py  dates.py  durations.py  jalali.py  relative_dates.py
jasem/storage/: __init__.py  task_store.py  timelog_store.py
tests/: __init__.py  test_calendar_view.py  test_commands.py  test_config.py  test_dates_jalali.py  test_durations.py  test_jalali.py  test_openai_base_url.py  test_openai_provider.py  test_reports.py  test_spending.py  test_tracking.py
wiki/: AI-Backends.md  Command-Reference.md  Configuration.md  Dashboard.md  Data-Files.md  FAQ.md  Home.md  Installation.md  Jalali-Calendar.md  Natural-Language-Input.md  Quick-Start.md  README.md  Spending.md  Tasks.md  Time-Tracking.md  _Footer.md  _Sidebar.md  publish.sh
