[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "jasem"
version = "0.4.0"
description = "A plain-text task manager and time tracker with pluggable AI parsing (Ollama / OpenAI-compatible / Anthropic)."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "mrfatolahi1", email = "fatolahi.cs@gmail.com" }]
keywords = ["todo", "tasks", "cli", "time-tracking", "ollama", "llm", "anthropic", "openai"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
jasem = "jasem.interface.cli:main"

[project.urls]
Homepage = "https://github.com/mrfatolahi1/Jasem"
Source = "https://github.com/mrfatolahi1/Jasem"

[tool.setuptools.packages.find]
include = ["jasem*"]
